src/objects/Tech_Review__c.object
<CustomObject>
    <description>Technician Reviews</description>
    <fields>
        <fullName>Completed2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_would_you_rate_the_overall_job_and_q__c</fullName>
        <description>How would you rate the overall quality of service?</description>
        <label>Overall Quality of Service?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_would_you_rate_the_professionalism_o__c</fullName>
        <description>The professionalism of the technician?</description>
        <label>Professionalism of the technician?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_would_you_rate_the_technician_s_know__c</fullName>
        <description>Technician&apos;s knowledge of the system?</description>
        <label>Technician&apos;s knowledge of the system?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSETechRating__c</fullName>
        <label>MSE Tech Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Stars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Date_of_Initial_Oper__c</fullName>
        <formula>Related_Service_Date__r.Related_Work_Order__r.Account.DateofInitialOperation__c</formula>
        <label>Member Practice Date of Initial Oper</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Practice_MSE_del__c</fullName>
        <formula>Related_Service_Date__r.Related_Work_Order__r.Account.MSE__r.FirstName &amp; &quot; &quot; &amp; Related_Service_Date__r.Related_Work_Order__r.Account.MSE__r.LastName</formula>
        <label>Member Practice MSE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quickbase_Id__c</fullName>
        <label>Quickbase Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Member_Practice__c</fullName>
        <formula>Related_Service_Date__r.Related_Member_Practice__c</formula>
        <label>Related Member Practice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Service_Date__c</fullName>
        <label>Related Service Date</label>
        <referenceTo>Service_Date__c</referenceTo>
        <relationshipLabel>Tech Reviews</relationshipLabel>
        <relationshipName>MSE_Tech_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Related_Service_Date__r.Related_Work_Order__r.Id,  Related_Service_Date__r.Related_Work_Order__r.CaseNumber, &quot;_self&quot;)</formula>
        <label>Related Work Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Service_Provider__c</fullName>
        <label>Technician Service Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Sarcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Related_Service_Date__r.Technician_Name__c,  Related_Service_Date__r.Technician_Name__r.FirstName &amp; &quot; &quot; &amp; Related_Service_Date__r.Technician_Name__r.LastName ,&quot;_self&quot;)</formula>
        <label>Technician</label>
        <type>Text</type>
    </fields>
    <label>Tech Review</label>
    <nameField>
        <displayFormat>TechReview-{MM}{YYYY}-{0}</displayFormat>
        <label>Tech Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>